# ModdedBoost

./: README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: Build.yml  build.yml  cicd.yml  publish.yml
public/locales/en/: translation.json
public/locales/jp/: translation.json
public/locales/zh/: translation.json
src/: App.tsx  Router.tsx  i18n.js  main.tsx
src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: metadata-beta.json  metadata.json  mirrors-beta.json  mirrors.json  remote-beta.json  remote.json
src-tauri/resources/tools/rclone/: rclone.conf
src-tauri/resources/tools/sfo/: sfo
src-tauri/src/: app_initialize.rs  commands.rs  downloader.rs  file_check.rs  file_handler.rs  file_metadata.rs  game.rs  initialize.rs  lib.rs  main.rs  notify.rs  os.rs  patches.rs  psarc.rs  rclone.rs  request.rs  rpcs3.rs  updater.rs
src/app/: globals.css
src/components/: config.tsx  game-tabs.tsx  games.tsx  initialize.tsx  landing.tsx  store-loaded.tsx  tabtest.tsx
src/components/bg/: bg.css  bg.html
src/components/common/: file-select-icon-button.tsx  hover-icon-button.tsx  icon-button.tsx  language-toggle.tsx  mode-toggle.tsx  theme-provider.tsx  title-bar.tsx  tooltip-component.tsx
src/components/common/title-bar/: language-toggle.tsx  mirror-group-selector.tsx  mirror-group-toggle.tsx  mode-toggle.tsx  title-bar-buttons.tsx  title-bar.tsx
src/components/dialogs/files/: files-dialog.tsx  files-table-row.tsx
src/components/modal/: initialize-modal.tsx  invalid-path-modal.tsx  invalid-rap-modal.tsx  modals.tsx  running-process-modal.tsx  select-remote-modal.tsx  update-modal.tsx
src/components/ui/: table.tsx
src/lib/: constants.ts  metadata.ts  mirrors.ts  refresh.ts  remote.ts  rpcs3.ts  store.ts  update.ts
src/lib/store/: app.ts  config.ts  process.ts  session-storage.ts
