[package]
name = "moddedboost"
version = "0.0.0"
description = "Modded Boost Launcher"
authors = ["descatal"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
walkdir = "2"
tokio = { version = "1.35.1", features = [ "full" ] } 
serde_yaml = "0.9.30"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
