[package]
name = "moddedboost"
version = "0.0.0"
description = "Modded Boost Launcher"
authors = ["descatal"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moddedboost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-fs = "2.0.0-beta.1"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-upload = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
walkdir = "2"
tokio = { version = "1.35.1", features = [ "full" ] } 
serde_yaml = "0.9.30"
relative-path = "1.9.2"
async-process = "2.0.1"
md5 = "0.7.0"
window-vibrancy = "0.5.0"
reqwest = "0.11.23"
thiserror = "1.0.52"
futures-util = "0.3.30"
tokio-util = "0.7.10"
configparser = "3.0.4"
sysinfo = "0.30.5"
same-file = "1.0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
